Cvs con datos sintéticos y querys cypher de carga en Neo4j

--- a/notebooks/gold-dataset-generator.ipynb
+++ b/notebooks/gold-dataset-generator.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "adc68db3",
    "metadata": {},
    "outputs": [],
@@ -59,10 +59,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "ff20029a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generando usuarios...\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Generando usuarios...\")\n",
     "NUM_USERS = 100\n",
@@ -109,10 +117,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "14558361",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generando sesiones...\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Generando sesiones...\")\n",
     "TARGET_SESSIONS = 500\n",
@@ -201,10 +217,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "c8450bd4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generando eventos (pageviews)...\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Generando eventos (pageviews)...\")\n",
     "events_data = []\n",
@@ -263,22 +287,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "bdfb9d3a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Exportando CSVs...\n",
+      "Generación completa:\n",
+      "- users.csv: 100 registros\n",
+      "- sessions.csv: 500 registros\n",
+      "- events.csv: 2188 registros\n",
+      "\n",
+      "Nota: Busca los 20 usuarios que tienen historial anónimo previo.\n",
+      "Pista: Filtra en sessions.csv donde user_id es NULL y luego busca ese user_pseudo_id en otras sesiones donde user_id NO es NULL.\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Exportando CSVs...\")\n",
     "\n",
     "# Users: Simula base de datos SQL de clientes\n",
-    "df_users_export.to_csv('users.csv', index=False)\n",
+    "df_users_export.to_csv('../data/users.csv', index=False)\n",
     "\n",
     "# Sessions: Simula tabla de sesiones de GA4 (flat)\n",
     "# Mantenemos user_pseudo_id porque es la clave para el grafo\n",
-    "df_sessions.to_csv('sessions.csv', index=False, columns=['session_id', 'user_pseudo_id', 'user_id', 'session_date', 'source', 'medium', 'device'])\n",
+    "df_sessions.to_csv('../data/sessions.csv', index=False, columns=['session_id', 'user_pseudo_id', 'user_id', 'session_date', 'source', 'medium', 'device'])\n",
     "\n",
     "# Events: Simula tabla de eventos raw\n",
-    "df_events.to_csv('events.csv', index=False)\n",
+    "df_events.to_csv('../data/events.csv', index=False)\n",
     "\n",
     "print(f\"Generación completa:\")\n",
     "print(f\"- users.csv: {len(df_users_export)} registros\")\n",
@@ -290,8 +329,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
