Modificación de seguridad para cargar credenciales de Neo4j

--- a/notebooks/insert-data-on-neo4j.ipynb
+++ b/notebooks/insert-data-on-neo4j.ipynb
@@ -19,10 +19,16 @@
    "source": [
     "import pandas as pd\n",
     "from neo4j import GraphDatabase\n",
+    "from dotenv import load_dotenv\n",
     "import os\n",
     "\n",
-    "URI = \"neo4j+s://ce30717d.databases.neo4j.io\"\n",
-    "AUTH = (\"neo4j\", \"qqxxUQXCSnR9yp3X9YLDpgKbwaQOVtjXS83kY6tKY6s\")"
+    "load_dotenv()\n",
+    "\n",
+    "URI = os.getenv(\"NEO4J_URL\")\n",
+    "NEO4J_USER = os.getenv(\"NEO4J_USER\")\n",
+    "NEO4J_PASSWORD = os.getenv(\"NEO4J_PASSWORD\")\n",
+    "\n",
+    "AUTH = (NEO4J_USER, NEO4J_PASSWORD)"
    ]
   },
   {
