Cambio para aumentar el número de eventos generados

--- a/notebooks/insert-data-on-neo4j.ipynb
+++ b/notebooks/insert-data-on-neo4j.ipynb
@@ -20,6 +20,7 @@
     "import pandas as pd\n",
     "from neo4j import GraphDatabase\n",
     "from dotenv import load_dotenv\n",
+    "import sys\n",
     "import os\n",
     "\n",
     "load_dotenv()\n",
@@ -48,9 +49,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "users_df = pd.read_csv('../data/users.csv')\n",
-    "sessions_df = pd.read_csv('../data/sessions.csv')\n",
-    "events_df = pd.read_csv('../data/events.csv')\n",
+    "try:\n",
+    "    users_df = pd.read_csv('../data/users.csv')\n",
+    "    sessions_df = pd.read_csv('../data/sessions.csv')\n",
+    "    events_df = pd.read_csv('../data/events.csv')\n",
+    "except FileNotFoundError as e:\n",
+    "    print(f\"Error: No se encuentra el archivo {e.filename}. Asegúrate de haber ejecutado el script generador primero.\")\n",
+    "    sys.exit(1)\n",
     "\n",
     "# Convertir DataFrames a lista de diccionarios (formato nativo para Neo4j)\n",
     "# Convertimos timestamps a string ISO o se pueden pasar como parámetros datetime\n",
@@ -126,6 +131,15 @@
     "WITH row, e\n",
     "MATCH (s:Session {session_id: row.session_id})\n",
     "MERGE (s)-[:CONTIENE]->(e)\n",
+    "\"\"\"\n",
+    "\n",
+    "# 5. ENRIQUECIMIENTO SEMÁNTICO\n",
+    "# Busca eventos de venta y les pone la etiqueta :Conversion y una relación especial\n",
+    "q_semantic_layer = \"\"\"\n",
+    "MATCH (s:Session)-[:CONTIENE]->(e:Event)\n",
+    "WHERE e.url CONTAINS '/checkout/confirmacion' OR e.title = 'Pedido Confirmado'\n",
+    "SET e:Conversion\n",
+    "MERGE (s)-[:CONVERSION_REALIZADA]->(e)\n",
     "\"\"\""
    ]
   },
@@ -155,7 +169,10 @@
       "Creando índices...\n",
       "Cargando 100 usuarios...\n",
       "Cargando 500 sesiones...\n",
-      "Cargando 2188 eventos...\n",
+      "Cargando 5201 eventos...\n",
+      "Aplicando capa semántica (Detectando Ventas)...\n",
+      "   -> Etiquetas asignadas: 381\n",
+      "   -> Relaciones de conversión creadas: 381\n",
       "¡Carga completa!\n"
      ]
     }
@@ -198,10 +215,17 @@
     "            print(f\"Cargando {len(events_data)} eventos...\")\n",
     "            session.run(q_events, rows=events_data)\n",
     "\n",
-    "            # 5. Cerramos la sesión\n",
+    "            # Paso 5: Capa Semántica\n",
+    "            print(\"Aplicando capa semántica (Detectando Ventas)...\")\n",
+    "            result = session.run(q_semantic_layer)\n",
+    "            info = result.consume()\n",
+    "            print(f\"   -> Etiquetas asignadas: {info.counters.labels_added}\")\n",
+    "            print(f\"   -> Relaciones de conversión creadas: {info.counters.relationships_created}\")\n",
+    "\n",
+    "            # 6. Cerramos la sesión\n",
     "            session.close()\n",
     "\n",
-    "        # 6. Cerramos el driver\n",
+    "        # 7. Cerramos el driver\n",
     "        driver.close()\n",
     "\n",
     "    print(\"¡Carga completa!\")    \n",
